objects/modigie__Performance__c.object
<CustomObject>
    <fields>
        <fullName>modigie__Average_Response_Time__c</fullName>
        <label>Average Response Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Avg_res__c</fullName>
        <formula>TEXT(modigie__Average_Response_Time__c) + IF(ISBLANK(TEXT(modigie__Average_Response_Time__c)), &apos;&apos;, &apos; sec&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Response Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modigie__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Performance</label>
    <listViews>
        <fullName>modigie__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PER-{00000}</displayFormat>
        <label>Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>